# spacepool

./: README.md
apps/api/: .gitignore  .rgignore  Makefile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 01b45869178f_update_created_at_and_updated_at_fields_.py  0b5fdf544a27_add_users_accounts_and_users_.py  19575d611113_create_resources_table.py  61ea239eddb8_add_the_organization_field_on_the_users_.py  7c4e434f39a6_create_organization_and_space_tables_.py  85b32bd48c0b_create_users_and_accounts_tables.py  93063a0b4de5_create_user_account_and_user_credential_.py
apps/api/app/: initial_data.py  main.py  models.py
apps/api/app/api/: main.py
apps/api/app/api/routes/: auth.py  organization.py  resource.py
apps/api/app/core/: config.py  db.py  deps.py  security.py
apps/api/app/models/: __init__.py  account.py  organization.py  resource.py  shared.py  space.py  user.py
apps/api/app/services/: organizations.py  users.py
apps/web/: .prettierrc  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/web/app/: root.tsx  routes.ts
apps/web/app/components/pages/Common/: ErrorBoundary.tsx
apps/web/app/components/ui/: button.tsx
apps/web/app/routes/: home.tsx
