[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "authlib>=1.7.2",
    "bcrypt>=5.0.0",
    "black>=26.5.1",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.138.2",
    "isort>=8.0.1",
    "psycopg2>=2.9.12",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "sqlmodel",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
known_first_party = ["core", "api"]

[tool.black]
line_length = 80

[tool.setuptools.packages.find]
where = ["."]

[tool.fastapi]
entrypoint = "app.main:app"
